--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -3,9 +3,9 @@
 <p>My favorite color is <%= @color, @size %></p>
 <p>My size is <%= @size %></p>
 
-<% if @size == <=12 
-<p>My foot is to large</p>
-< %>
-	
+<% if @size > 12 %>
+	<p>My shoe size is <%= @size %> I have Huge feet.</p>
+	<%
+
 
 
